# cosmos-scripts

./: README.md  pyproject.toml  set_authz.py
common/: common.py
cosmos_directory/: common.py
cosmpy/: common.py  network_config.py
cosmpy_utils/: common.py  network_config.py
set_authz/: set_authz.py
